# eks-cluster-upgrade

./: .gitignore  .pre-commit-config.yaml  README.md  eks_updater.py  installer.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  maintenance.yml
.github/actions/delete-cluster/: action.yaml
.github/actions/dep-setup/: action.yml
.github/scripts/: cluster_creation.yaml  cluster_creation_1.21.yaml  cluster_creation_1.22-us-east-1.yaml  cluster_creation_1.22-us-east-2.yaml  cluster_creation_1.22.yaml  cluster_creation_1.23-us-east-2.yaml  cluster_creation_1.23.yaml  cluster_creation_1.24-us-east-1.yaml  cluster_creation_1.24.yaml  cluster_creation_1_22.yaml  cluster_creation_1_23.yaml
.github/workflows/: close-stale-issues.yaml  e2e-test-template.yaml  e2e-test.yaml  lint.yaml  publish.yaml  security.yaml  tests.yaml  validate-pr-install.yaml  validate.yaml
eksupdate/: cli.py  starter.py
eksupdate/src/: boto_aws.py  eks_get_image_type.py  eksctlfinal.py  ekslogs.py  k8s_client.py  latest_ami.py  preflight_module.py  self_managed.py
eksupdate/src/S3Files/: cluster_roles.json  core-dns.yaml  depricatedApi  version_dict.json  versions.json  vpc-cni.json
eksupgrade/: __init__.py  __main__.py  cli.py  exceptions.py  starter.py  utils.py
eksupgrade/models/: base.py  eks.py
eksupgrade/src/: boto_aws.py  eks_get_image_type.py  eksctlfinal.py  k8s_client.py  latest_ami.py  preflight_module.py  self_managed.py
eksupgrade/src/S3Files/: coredns.json  depricatedApi  kube-proxy-configmap.json  kube-proxy.json  version_dict.json  vpc-cni.yaml
tests/: conftest.py  test_cli.py  test_eks_get_image_type.py  test_k8s_client.py  test_models_base.py  test_models_eks.py  test_utils.py
