[tool.poetry]
name = "eksupgrade"
version = "0.6.0"
description = "The Amazon EKS cluster upgrade utility"
authors = ["EKS Upgrade Maintainers <eks-upgrade-maintainers@amazon.com>"]
readme = "README.md"
packages = [{include = "eksupgrade"}]
license = "MIT-0"
keywords = ["amazon", "aws", "aws-samples", "eks", "kubernetes", "upgrade", "eksupgrade"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT No Attribution License (MIT-0)",
]
include = [
    "README.md",
    "LICENSE",
]

[tool.poetry.scripts]
eksupgrade = "eksupgrade.cli:entry"

[tool.bandit]
exclude_dirs = ["tests"]

# Styling and linting Configurations
[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pylint]
max-line-length = 120

[tool.pylint.messages_control]
max-line-length = 120

[tool.pylint.format]
max-line-length = 120
max-module-lines = 1000

[tool.poe.tasks]
isort = "isort --profile=black ."
black = "black ."
check-black = {cmd = "black . --check --diff", help = "Check code for black styling"}
check-isort = {cmd = "isort --check --profile=black .", help = "Check code for import styling"}
check-docstrings = "pydocstyle -e ."
check-pylint = "pylint eksupgrade"
check = ["check-isort", "check-black"]
lint = ["check-docstrings", "check-pylint"]
fix = ["isort", "black"]
test = "pytest --cov=eksupgrade --cov-report=xml --cov-report=term"
safety = "safety check"
bandit = "bandit -r eksupgrade"
security = ["safety", "bandit"]
# requires poethepoet outside of poetry.
install = "poetry install"
build = "poetry build"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.26.71"
kubernetes = ">=21.0.0 <26.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
coverage = "^7.1.0"
moto = {extras = ["ec2", "eks", "ssm", "sts"], version = "^4.1.2"}


[tool.poetry.group.dev.dependencies]
isort = {extras = ["toml"], version = "^5.12.0"}
black = "^22.12.0"
pydocstyle = "^6.3.0"
pylint = "^2.16.2"
mypy = "^1.0.0"
debugpy = "^1.6.6"


[tool.poetry.group.security.dependencies]
safety = "^2.3.5"
bandit = {extras = ["toml"], version = "^1.7.4"}


[tool.poetry.group.types.dependencies]
types-pyyaml = "^6.0.12.6"
boto3-stubs = {extras = ["ec2", "eks", "ssm", "sts"], version = "^1.26.71"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
