[tool.poetry]
name = "eksupgrade"
version = "0.9.0"
description = "The Amazon EKS cluster upgrade utility"
authors = ["EKS Upgrade Maintainers <eks-upgrade-maintainers@amazon.com>"]
readme = "README.md"
packages = [{include = "eksupgrade"}]
license = "MIT-0"
keywords = ["amazon", "aws", "aws-samples", "eks", "kubernetes", "upgrade", "eksupgrade"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT No Attribution License (MIT-0)",
]
include = [
    "README.md",
    "LICENSE",
]

[tool.poetry.scripts]
eksupgrade = "eksupgrade.cli:app"

[tool.bandit]
exclude_dirs = ["tests"]

# Styling and linting Configurations
[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.poe.tasks]
isort = "isort --profile=black ."
black = "black ."
check-black = {cmd = "black . --check --diff", help = "Check code for black styling"}
check-isort = {cmd = "isort --check --profile=black .", help = "Check code for import styling"}
check-docstrings = "pydocstyle -e ."
check-ruff = "ruff check eksupgrade"
check = ["check-isort", "check-black"]
lint = ["check-docstrings", "check-ruff"]
fix = ["isort", "black"]
test = "pytest --cov=eksupgrade --cov-report=xml --cov-report=term"
ruff = "ruff check --fix eksupgrade"
safety = "safety check"
bandit = "bandit -r eksupgrade"
security = ["safety", "bandit"]
# requires poethepoet outside of poetry.
install = "poetry install"
build = "poetry build"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.26.94"
kubernetes = ">=21.0.0 <25.0.0"
packaging = ">=21.0,<22.0"
typer = {extras = ["all"], version = "^0.7.0"}


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
coverage = "^7.2.2"
moto = {extras = ["autoscaling", "ec2", "eks", "ssm", "sts"], version = "^4.1.5"}


[tool.poetry.group.dev.dependencies]
isort = {extras = ["toml"], version = "^5.12.0"}
black = "^22.12.0"
pydocstyle = "^6.3.0"
mypy = "^1.1.1"
debugpy = "^1.6.6"
ruff = "^0.0.264"


[tool.poetry.group.security.dependencies]
safety = "^2.3.5"
bandit = {extras = ["toml"], version = "^1.7.5"}


[tool.poetry.group.types.dependencies]
types-pyyaml = "^6.0.12.8"
boto3-stubs = {extras = ["autoscaling", "ec2", "eks", "ssm", "sts"], version = "^1.26.94"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
