[tool.poetry]
name = "eksupgrade"
version = "0.9.0"
description = "The Amazon EKS cluster upgrade utility"
authors = ["EKS Upgrade Maintainers <eks-upgrade-maintainers@amazon.com>"]
readme = "README.md"
packages = [{include = "eksupgrade"}]
license = "MIT-0"
keywords = ["amazon", "aws", "aws-samples", "eks", "kubernetes", "upgrade", "eksupgrade"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT No Attribution License (MIT-0)",
]
include = [
    "README.md",
    "LICENSE",
]

[tool.poetry.scripts]
eksupgrade = "eksupgrade.cli:app"

[tool.bandit]
exclude_dirs = ["tests"]

# Styling and linting Configurations
[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.poe.tasks]
isort = "isort --profile=black ."
black = "black ."
check-black = {cmd = "black . --check --diff", help = "Check code for black styling"}
check-isort = {cmd = "isort --check --profile=black .", help = "Check code for import styling"}
check-docstrings = "pydocstyle -e ."
check-ruff = "ruff check eksupgrade"
check = ["check-isort", "check-black"]
lint = ["check-docstrings", "check-ruff"]
fix = ["isort", "black"]
test = "pytest --cov=eksupgrade --cov-report=xml --cov-report=term"
ruff = "ruff check --fix eksupgrade"
safety = "safety check"
bandit = "bandit -r eksupgrade"
security = ["safety", "bandit"]
# requires poethepoet outside of poetry.
install = "poetry install"
build = "poetry build"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.32"
kubernetes = ">=23.0.0 <29.0.0"
packaging = ">=21.0,<24.0"
typer = {extras = ["all"], version = "^0.9"}


[tool.poetry.group.test.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
coverage = "^7.4"
moto = {extras = ["autoscaling", "ec2", "eks", "ssm", "sts"], version = "^4.2"}


[tool.poetry.group.dev.dependencies]
isort = {extras = ["toml"], version = "^5.13"}
black = ">=23.12,<25.0"
pydocstyle = "^6.3"
mypy = "^1.8"
debugpy = "^1.8"
ruff = "^0.1"


[tool.poetry.group.security.dependencies]
safety = "^3.0"
bandit = {extras = ["toml"], version = "^1.7"}


[tool.poetry.group.types.dependencies]
types-pyyaml = "^6.0"
boto3-stubs = {extras = ["autoscaling", "ec2", "eks", "ssm", "sts"], version = "^1.32"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
